@@ -7,6 +7,25 @@ puts "will run JavaScript specs from RedJS #{RedJS::VERSION}"
 describe Rhino::Context do
   
   it_behaves_like 'RedJS::Context'
+
+  # TODO: remove if present in RedJS
+  it "catched ScriptError in JS" do
+    klass = Class.new do
+      def muu(*args)
+        args && raise(ScriptError.new('muu'))
+      end
+    end
+    
+    error = nil
+    lambda {
+      RedJS::Context.new do |cxt|
+        cxt['obj'] = klass.new
+        error = cxt.eval('var error; try { obj.muu(); error = null } catch(e) { error = e }')
+      end
+    }.should_not raise_error
+    error.should_not be nil
+    error.should be_a ScriptError
+  end
   
   it "keeps objects iterable when property accessor is provided" do
     klass = Class.new do
